<resources>

    <string name="vector_tiles_key">vector-tiles-Pfuh7pk</string>
    <string name="mapzen_search_key">search-a4Sk1gR </string>
    <string name="app_name">OSM LIPS</string>

    <string name="library_source">Drake University | Tangram | \u00A9 OSM contributors | Mapzen</string>

    <string-array name="style_array">
        <item>Bubble Wrap</item>
        <item>Cinnabar</item>
        <item>Refill</item>
    </string-array>

    <string name="bubbleWrapStyle">Bubble Wrap</string>
    <string name="cinnabarStyle">Cinnabar</string>
    <string name="refillStyle">Refill</string>
    <string name="titleStyle">Style</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh_wifi">Refresh Wifi</string>
    <string name="location_activity">Location Services</string>
    <string name="wifi_scanner_activity">Wifi Scanner</string>
    <string name="map_activity">Map</string>

    <string name="select_wifi">Select Wifi</string>
    <string name="sensor_description">Select a sensor</string>
    <string name="action_refresh_location">Refresh Location</string>
    <string name="action_search">Search</string>

    <string name="btn_location_activity_hint">Get current Latitude and Longitude</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_updated_time_label">Last Updated</string>
    <string name="geoaddress_label">Address</string>
    <string name="no_geocoder_available">No Geocoder available</string>

    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid Latitude or Longitude values</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Geo address found</string>

    <string name="wifi_info_label">Wifi Info</string>
    <string name="wifi_state_label">Wifi State</string>
    <string name="wifi_list">List of nearby Wifi routers:</string>
    <string name="wifi_connected">Connected Wifi:</string>
</resources>
