<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:showAsAction="ifRoom"
        android:title="@string/titleStyle">

        <menu>
            <item
                android:id="@+id/menuBubbleWrapStyle"
                android:title="@string/bubbleWrapStyle"/>
            <item
                android:id="@+id/menuCinnabarStyle"
                android:title="@string/cinnabarStyle"/>
            <item
                android:id="@+id/menuRefillStyle"
                android:title="@string/refillStyle"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_select_wifi"
        android:orderInCategory="1"
        android:title="@string/select_wifi"
        app:showAsAction="never" />
</menu>
